--- a/uk/gallery.html
+++ b/uk/gallery.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">+1 (819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 525-7455</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -52,10 +52,24 @@
       <div class="container">
         <h2>Після аварії</h2>
         <div class="gallery-grid gallery-page">
-          <div class="gallery-item placeholder">Проект після аварії 1</div>
-          <div class="gallery-item placeholder">Проект після аварії 2</div>
-          <div class="gallery-item placeholder">Проект після аварії 3</div>
-          <div class="gallery-item placeholder">Проект після аварії 4</div>
+          <div class="gallery-item">
+            <img src="../images/gallery/apres-sinistre/apres-sinistre-1.jpg" alt="Проект після аварії 1" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/apres-sinistre/apres-sinistre-2.jpg" alt="Проект після аварії 2" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/apres-sinistre/apres-sinistre-3.jpg" alt="Проект після аварії 3" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/apres-sinistre/apres-sinistre-4.jpg" alt="Проект після аварії 4" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/apres-sinistre/apres-sinistre-5.jpg" alt="Проект після аварії 5" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/apres-sinistre/apres-sinistre-6.jpg" alt="Проект після аварії 6" />
+          </div>
         </div>
       </div>
     </section>
@@ -64,14 +78,65 @@
       <div class="container">
         <h2>Ремонти</h2>
         <div class="gallery-grid gallery-page">
-          <div class="gallery-item placeholder">Ремонт 1</div>
-          <div class="gallery-item placeholder">Ремонт 2</div>
-          <div class="gallery-item placeholder">Ремонт 3</div>
-          <div class="gallery-item placeholder">Ремонт 4</div>
+          <div class="gallery-item">
+            <img src="../images/gallery/renovation/renovation-1.jpg" alt="Ремонт 1" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/renovation/renovation-2.jpg" alt="Ремонт 2" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/renovation/renovation-3.jpg" alt="Ремонт 3" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/renovation/renovation-4.jpg" alt="Ремонт 4" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/renovation/renovation-5.jpg" alt="Ремонт 5" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/renovation/renovation-6.jpg" alt="Ремонт 6" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Азбест</h2>
+        <div class="gallery-grid gallery-page">
+          <div class="gallery-item">
+            <img src="../images/gallery/azbest/azbest-1.jpg" alt="Азбест 1" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/azbest/azbest-2.jpg" alt="Азбест 2" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/azbest/azbest-3.jpg" alt="Азбест 3" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/azbest/azbest-4.jpg" alt="Азбест 4" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/azbest/azbest-5.jpg" alt="Азбест 5" />
+          </div>
+          <div class="gallery-item">
+            <img src="../images/gallery/azbest/azbest-6.jpg" alt="Азбест 6" />
+          </div>
         </div>
       </div>
     </section>
   </main>
+
+  <!-- Lightbox Modal -->
+  <div class="lightbox" id="lightbox">
+    <button class="lightbox-close" aria-label="Close">&times;</button>
+    <button class="lightbox-prev" aria-label="Previous">&#8249;</button>
+    <button class="lightbox-next" aria-label="Next">&#8250;</button>
+    <div class="lightbox-content">
+      <img src="" alt="" id="lightbox-image" />
+      <div class="lightbox-caption" id="lightbox-caption"></div>
+    </div>
+  </div>
 
   <footer class="footer">
     <div class="container footer-inner">
@@ -95,6 +160,8 @@
   </footer>
 
   <script src="../js/main.js"></script>
+  <script src="../js/gallery.js"></script>
 </body>
 </html>
+
 
