--- a/galerie.html
+++ b/galerie.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">+1 (819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 525-7455</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -52,10 +52,24 @@
       <div class="container">
         <h2>Après-sinistre</h2>
         <div class="gallery-grid gallery-page">
-          <div class="gallery-item placeholder">Projet après-sinistre 1</div>
-          <div class="gallery-item placeholder">Projet après-sinistre 2</div>
-          <div class="gallery-item placeholder">Projet après-sinistre 3</div>
-          <div class="gallery-item placeholder">Projet après-sinistre 4</div>
+          <div class="gallery-item">
+            <img src="images/gallery/apres-sinistre/apres-sinistre-1.jpg" alt="Projet après-sinistre 1" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/apres-sinistre/apres-sinistre-2.jpg" alt="Projet après-sinistre 2" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/apres-sinistre/apres-sinistre-3.jpg" alt="Projet après-sinistre 3" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/apres-sinistre/apres-sinistre-4.jpg" alt="Projet après-sinistre 4" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/apres-sinistre/apres-sinistre-5.jpg" alt="Projet après-sinistre 5" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/apres-sinistre/apres-sinistre-6.jpg" alt="Projet après-sinistre 6" />
+          </div>
         </div>
       </div>
     </section>
@@ -64,14 +78,65 @@
       <div class="container">
         <h2>Rénovations</h2>
         <div class="gallery-grid gallery-page">
-          <div class="gallery-item placeholder">Rénovation 1</div>
-          <div class="gallery-item placeholder">Rénovation 2</div>
-          <div class="gallery-item placeholder">Rénovation 3</div>
-          <div class="gallery-item placeholder">Rénovation 4</div>
+          <div class="gallery-item">
+            <img src="images/gallery/renovation/renovation-1.jpg" alt="Rénovation 1" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/renovation/renovation-2.jpg" alt="Rénovation 2" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/renovation/renovation-3.jpg" alt="Rénovation 3" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/renovation/renovation-4.jpg" alt="Rénovation 4" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/renovation/renovation-5.jpg" alt="Rénovation 5" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/renovation/renovation-6.jpg" alt="Rénovation 6" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Amiante</h2>
+        <div class="gallery-grid gallery-page">
+          <div class="gallery-item">
+            <img src="images/gallery/azbest/azbest-1.jpg" alt="Amiante 1" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/azbest/azbest-2.jpg" alt="Amiante 2" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/azbest/azbest-3.jpg" alt="Amiante 3" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/azbest/azbest-4.jpg" alt="Amiante 4" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/azbest/azbest-5.jpg" alt="Amiante 5" />
+          </div>
+          <div class="gallery-item">
+            <img src="images/gallery/azbest/azbest-6.jpg" alt="Amiante 6" />
+          </div>
         </div>
       </div>
     </section>
   </main>
+
+  <!-- Lightbox Modal -->
+  <div class="lightbox" id="lightbox">
+    <button class="lightbox-close" aria-label="Close">&times;</button>
+    <button class="lightbox-prev" aria-label="Previous">&#8249;</button>
+    <button class="lightbox-next" aria-label="Next">&#8250;</button>
+    <div class="lightbox-content">
+      <img src="" alt="" id="lightbox-image" />
+      <div class="lightbox-caption" id="lightbox-caption"></div>
+    </div>
+  </div>
 
   <footer class="footer">
     <div class="container footer-inner">
@@ -95,5 +160,6 @@
   </footer>
 
   <script src="js/main.js"></script>
+  <script src="js/gallery.js"></script>
 </body>
 </html>
